Carousel [ z-index issue where nav buttons show over the main nav ]

--- a/-/media/Themes/AWS/AwareWeb/AwareWeb/sass/component-carousel.scss
+++ b/-/media/Themes/AWS/AwareWeb/AwareWeb/sass/component-carousel.scss
@@ -34,7 +34,7 @@
         //AwS
         @include respond-to(desktop) {       
             position:relative;
-            z-index:20;
+            z-index:1;
         }
         .nav-items {
             display: inline-block;
